--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "cSpell.words": ["persistor", "reduxjs", "reswitchapp", "viewability"]
+    "cSpell.words": ["persistor", "reduxjs", "reswitch", "reswitchapp", "viewability"]
 }
