--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
         "@react-navigation/native-stack": "^6.9.17",
         "@react-navigation/stack": "^6.3.20",
         "@reduxjs/toolkit": "^2.0.1",
+        "@types/react-native-check-box": "^2.1.6",
         "babel-plugin-module-resolver": "^5.0.0",
+        "deprecated-react-native-prop-types": "^5.0.0",
         "react": "18.2.0",
         "react-native": "0.73.2",
+        "react-native-check-box": "^2.1.7",
         "react-native-dotenv": "^3.4.9",
         "react-native-fast-image": "^8.6.3",
         "react-native-flash-message": "^0.4.2",
@@ -34,7 +37,7 @@
         "react-native-screens": "^3.29.0",
         "react-native-splash-screen": "^3.3.0",
         "react-native-svg": "^14.1.0",
-        "react-native-svg-transformer": "^1.2.0",
+        "react-native-svg-transformer": "^1.3.0",
         "react-redux": "^9.0.4",
         "redux": "^5.0.0",
         "redux-persist": "^6.0.0",
